# ollama-mcp-server

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  debug_datetime.py  debug_direct.py  debug_modelinfo.py  debug_models.py  debug_raw_client.py  pyproject.toml  show_models.py  simple_fix_test.py  test_client_json.py  test_datetime_safe.py  test_direct_tool.py  test_final_confirmation.py  test_fresh_client.py  test_list_models.py  test_mcp_client.py  test_mcp_fixed.py  test_simple.py
src/: __init__.py
src/ollama_mcp/: __init__.py  client.py  client_bridge.py  client_v0_9_backup.py  config.py  config_v0_9_backup.py  hardware_checker.py  job_manager.py  minimal_server.py  model_manager.py  model_manager_extended_REMOVED.py  ollama_server_control.py  server.py  server_manager.py  server_v0_9_backup.py  server_v1_backup.py
src/ollama_mcp/tools/: __init__.py  advanced_tools.py  base_tools.py
src/ollama_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_client.py  test_tools.py
